--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
 	<head>
 		<title>Profile</title>
 
-	    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,6 +72,7 @@
 	            <p class="text-muted credit">Proyecto Web 
 	            	<a href="mailto:damol_13@hotmail.com">damol_13@hotmail.com</a>
 	            	<a href="mailto:sebasth24@hotmail.com">sebasth24@hotmail.com</a>
+	            	<a href="mailto:pancho_bello@hotmail.com">pancho_bello@hotmail.com</a>
 	            </p>
 	        </div>
 	        {% endblock footer %}
