--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Profile</title>
 
+	    <link rel="shortcut icon" href="{{ url_for('static', filename='icono.gif') }}">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
