--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 	{% block head %}
 	<head>
-		<title>Profile</title>
+		<title>DoggyStyle</title>
 
 	    <link rel="shortcut icon" href="{{ url_for('static', filename='icono.gif') }}">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
 		{% block menu %}
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Tutorial</a>
+				<a class="navbar-brand" href="#">Hola</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
