--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
-					<li><a href="#">Nuevos amigos</a></li>
+					<li><a href="http://localhost:5000/amigos">Nuevos amigos</a></li>
 					<li><a href="#">Encuentra el amor </a></li>
 					<li><a href="#">Perfil de mascotas</a></li>
 				</ul>
