--- a/templates/base.html
+++ b/templates/base.html
@@ -45,17 +45,16 @@
 		{% block menu %}
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Hola</a>
+				<a class="navbar-brand" href="#">DoggyStyle</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
 					<li><a href="http://localhost:5000/amigos">Nuevos amigos</a></li>
-					<li><a href="#">Encuentra el amor </a></li>
-					<li><a href="#">Perfil de mascotas</a></li>
+					<li><a href="http://localhost:5000/buscandoamor">Encuentra el amor </a></li>
 				</ul>
 			</div>
 			<div>
-				<a class="navbar-brand navbar-right" href="#">Logout</a>
+				<a class="navbar-brand navbar-right" href="#"></a>
 			</div>
 		</nav>
 		{% endblock menu %}
